[tool.poetry]
name = "backend-for-vpn"
version = "0.1.0"
description = ""
authors = ["Laajf <krym4rtem@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
psycopg2 = "2.9.9"
unicorn = "^2.0.1.post1"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
